--- a/page2.html
+++ b/page2.html
@@ -24,7 +24,7 @@
         </div>
 
         <p>
-            <button><a href="page1.html">Go to Webpage 1</a></button> 
+            <button><a href="index.html">Go to Webpage 1</a></button> 
             <button><a href="page3.html">Go to Webpage 3</a></button>
         </p>
     </div>
