--- a/page3.html
+++ b/page3.html
@@ -99,7 +99,7 @@
         </table>
 
         <p style="color: white;">
-            <button><a href="page1.html">Go to Webpage 1</a></button> 
+            <button><a href="index.html">Go to Webpage 1</a></button> 
             <button><a href="page2.html">Go to Webpage 2</a></button>
         </p>
     </div>
